--- a/my_app/Dockerfile
+++ b/my_app/Dockerfile
@@ -5,8 +5,5 @@ COPY requirements.txt requirements.txt
 RUN pip install -r requirements.txt
 
 COPY . .
-# CMD ["python", "start_app.py"]
-# CMD ["gunicorn", "-b", "0.0.0.0:8000", "start_app.py"]
-# CMD ["gunicorn", "-b", "0.0.0.0:8000", "--access-logfile", "start_app:create_app()"]
-CMD gunicorn -b 0.0.0.0:8000 --timeout 1000 --workers=1 "start_app:starrt()"
+CMD gunicorn -b 0.0.0.0:8000 --timeout 1000 --reload --workers=1 "start_app:start()"
 # CMD["gunicorn", "--timeout", "1000", "--workers=1","-b", "0.0.0.0:8000","--log-level", "debug", "manage"]
