--- a/training_config.json
+++ b/training_config.json
@@ -1,5 +1,5 @@
 {
-  "PRETRAINED_MODEL": "sberbank-ai/rugpt3small_based_on_gpt2",
+  "PRETRAINED_MODEL": "1",
   "MODEL_OUTPUT_DIR":  "congrats_generator/my_app/models/",
   "TRAIN_EPOCHS":  1,
   "SAVE_DIR_PATH":  "./data"
